Add api get order and update and remove order  and write api swagger
